--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 
 osx/ccminer-cryptonight-mac
 osx/cpuminer-multi-opencl
-ubuntu-16/sgminer-gm/
+ubuntu-16/amdgpu-pro-17.40-492261/
+ubuntu-16/amdgpu-pro-17.40-492261.tar.xz
 ubuntu-16/cpuminer-multi
+ubuntu-16/sgminer-gm/
