--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ubuntu-16/amdgpu-pro-17.40-492261.tar.xz
 ubuntu-16/cpuminer-multi
 ubuntu-16/sgminer-gm/
 rhel-7/NVIDIA-Linux-x86_64-384.98.run
+rhel-7/ccminer
