--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 
 osx/ccminer-cryptonight-mac
 osx/cpuminer-multi-opencl
+rhel-7/ccminer
+rhel-7/fglrx-14.41/
+rhel-7/linux-amd-14.41rc1-opencl2-sep19.zip
+rhel-7/NVIDIA-Linux-x86_64-384.98.run
 ubuntu-16/amdgpu-pro-17.40-492261/
 ubuntu-16/amdgpu-pro-17.40-492261.tar.xz
 ubuntu-16/cpuminer-multi
 ubuntu-16/sgminer-gm/
-rhel-7/NVIDIA-Linux-x86_64-384.98.run
-rhel-7/ccminer
