--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ rhel-7/linux-amd-14.41rc1-opencl2-sep19.zip
 rhel-7/v2.4.2.zip
 rhel-7/xmrig-nvidia-2.4.2/
 ubuntu-16/cpuminer-multi
+ubuntu-16/cuda-repo-ubuntu1604_9.0.176-1_amd64.deb
 ubuntu-16/sgminer-gm/
 ubuntu-16/xmrig-nvidia-2.4.2/
